--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 		<script async src="index.js"></script>
 		<title>Hangman Game | Javascript</title>
 	</head>
-	<body></body>
+	<body>
+		<h1>Hangman Game</h1>
+	</body>
 </html>
