Added game and pictures

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 					set free from that sentence and not tried again on that crime.
 				</p>
 			</section>
+			<section class="game">
+				<h3>
+					Failed Attempts: <span id="mistakes">0</span> of
+					<span id="maxWrong">6</span>
+				</h3>
+				<img id="hangman-img" src="./assets/6.svg" alt="hangman" />
+				<p>Guess the city from UK</p>
+				<p id="city-name">Press the "PLAY" button to start the game</p>
+				<section id="keyboard"></section>
+				<button class="reset-btn">PLAY</button>
+			</section>
 		</article>
 	</body>
 </html>
